# de-lightful-deblur

./: .gitignore  README.md  arucomarkertrack.py  contour_to_psf.py  gui.py  pyproject.toml  requirements.txt  streak_detect.py  two_cameras.py
assets/tag_data/: op_flow_test5.npy
assets/vids/: op_flow_test1.h264  op_flow_test2.h264  op_flow_test3.h264  op_flow_test4.h264  op_flow_test5.h264  test2.mov
astride_testing/: test.py
data/output_artificialcontour/: skeleton_coords_artificialcontour_20241108_111303.csv
data/output_cropped_sample/: skeleton_coords_cropped_sample_20241108_111306.csv
data/output_cropped_sample_2/: skeleton_coords_cropped_sample_2_20241108_111307.csv
memento/: boot_out.txt  code.py  settings.toml
memento/lib/: ._adafruit_aw9523.mpy  ._adafruit_bitmap_font  ._adafruit_bus_device  ._adafruit_connection_manager.mpy  ._adafruit_debouncer.mpy  ._adafruit_display_text  ._adafruit_io  ._adafruit_lis3dh.mpy  ._adafruit_minimqtt  ._adafruit_ntp.mpy  ._adafruit_pixelbuf.mpy  ._adafruit_pycamera  ._adafruit_register  ._adafruit_requests.mpy  ._adafruit_ticks.mpy  ._neopixel.mpy
memento/lib/adafruit_bitmap_font/: .___init__.py  ._bdf.mpy  ._bitmap_font.mpy  ._glyph_cache.mpy  ._pcf.mpy  ._ttf.mpy
memento/lib/adafruit_bus_device/: .___init__.py  ._i2c_device.mpy  (+1 more)
optical_flow/: optical_flow.py  test.mov  test1.mov
rpi/: crop.py  extract_frames.py  trigger.py
scripts/: arucomarkertrack.py  dual_recorder.py  optical_flow.py  process_video.py  psf_utils.py  tag_motion.py
scripts/camera_scripts/: crop.py  extract_frames.py  trigger.py
(+23 files in other folders)
